<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="chat_box_hint">Message</string>

    <string name="attachment_type_selector__audio">صدا</string>
    <string name="attachment_type_selector__audio_description">صوت</string>
    <string name="attachment_type_selector__contact">مخاطب</string>
    <string name="attachment_type_selector__contact_description">مخاطب</string>
    <string name="attachment_type_selector__camera">دوربین</string>
    <string name="attachment_type_selector__camera_description">دوربین</string>
    <string name="attachment_type_selector__location">موقعیت</string>
    <string name="attachment_type_selector__location_description">موقعیت</string>
    <string name="attachment_type_selector__gif">گیف</string>
    <string name="attachment_type_selector__gif_description">گیف</string>
    <string name="attachment_type_selector__gallery_description">تصویر با ویدئو</string>
    <string name="attachment_type_selector__file_description">فایل</string>
    <string name="attachment_type_selector__gallery">گالری</string>
    <string name="attachment_type_selector__file">فایل</string>
    <string name="attachment_type_selector__drawer_description">تغییر حالت نگه دارنده پیوست</string>

    <string name="permission_required">مجوز لازم است</string>
    <string name="Permissions_continue">ادامه</string>
    <string name="call_requires_the_call_permission_but_it_has_been_permanently_denied">Limoo جهت تماس گرفتن نیاز به دسترسی تماس دارد، اما به طور دائم رد شده است. لطفاً به منوی تنظیمات برنامه ها رفته، \"Permissions\" را انتخاب کرده، و \"Call\" را فعال کنید.</string>
    <string name="cancel">لغو</string>

    <string name="AttachmentManager_cant_open_media_selection">امکان یافتن برنامه‌ای برای انتخاب مدیا وجود ندارد.</string>
    <string name="AttachmentManager_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Limoo برای ارسال فایل‌های تصویری و صوتی نیاز به دسترسی به حافظه دارد اما این دسترسی به طور همیشگی رد شده است. لطفا به بخش برنامه در تنظیمات تلفن همراه خود رفته و پس از یافتن Limoo وارد بخش دسترسی ها شده و گزینه حافظه را فعال کنید.</string>
    <string name="AttachmentManager_requires_contacts_permission_in_order_to_attach_contact_information">Limoo برای جستجو مخاطبان نیاز به دسترسی به مجوز مخاطبان دارد اما این دسترسی به Limoo داده نشده است. لطفا به بخش برنامه ها در تنظیمات تلفن همراه خود رفته در ادامه پس از یافتن Limoo وارد بخش دسترسی ها شده و گزینه مخاطبان را فعال کنید.</string>
    <string name="AttachmentManager_requires_location_information_in_order_to_attach_a_location">Limoo برای استفاده از سرویس مکانیاب،  نیازمند دسترسی به سرویس مکان دارد ولی این دسترسی قطع شده است. لطفا برای ادامه دادن، به بخش منوی تنظیمات برنامه رفته، \"اجازه ها\" را انتخاب کرده و گزینه ی \"مکان\" را فعال نمایید.</string>
    <string name="AttachmentManager_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Limoo جهت گرفتن عکس نیاز به دسترسی دوربین دارد، اما به طور دائم رد شده است. لطفاً به منوی تنظیمات برنامه ها رفته، \"Permissions\" را انتخاب کرده، و \"Camera\" را فعال کنید.</string>

    <string name="kwik_picker_title">Select Image</string>
    <string name="no_image">No Image</string>
    <string name="done">Done</string>

    <string name="select_max_count">Already %1$d images selected</string>
    <string name="select_min_count">You have to choose %1$d images</string>

    <string name="slide_to_cancel">"Slide to cancel"</string>
</resources>