<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackground"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow_drop"
        android:rotation="180" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/attachment_type_selector__drawer_description"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_arrow_down_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.emamagic.chat_box.CircleColorImageView
                    android:id="@+id/audio_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/attachment_type_selector__audio_description"
                    android:scaleType="center"
                    android:src="@drawable/ic_sound"
                    app:circleColor="@color/material_orange_400" />

                <TextView
                    style="@style/AttachmentTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/attachment_type_selector__audio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.emamagic.chat_box.CircleColorImageView
                    android:id="@+id/gallery_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/attachment_type_selector__gallery_description"
                    android:scaleType="center"
                    android:src="@drawable/ic_gallery" />

                <TextView
                    style="@style/AttachmentTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/attachment_type_selector__gallery" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.emamagic.chat_box.CircleColorImageView
                    android:id="@+id/camera_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/attachment_type_selector__camera_description"
                    android:scaleType="center"
                    android:src="@drawable/ic_camera"
                    app:circleColor="@color/material_green_400" />

                <TextView
                    style="@style/AttachmentTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/attachment_type_selector__camera" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.emamagic.chat_box.CircleColorImageView
                    android:id="@+id/document_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/attachment_type_selector__file_description"
                    android:scaleType="center"
                    android:src="@drawable/ic_file"
                    app:circleColor="@color/material_red_400" />

                <TextView
                    style="@style/AttachmentTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/attachment_type_selector__file" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.emamagic.chat_box.CircleColorImageView
                    android:id="@+id/contact_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/attachment_type_selector__contact_description"
                    android:scaleType="center"
                    android:src="@drawable/ic_phone_contacts"
                    app:circleColor="@color/material_blue_400" />

                <TextView
                    style="@style/AttachmentTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/attachment_type_selector__contact" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
